--- a/week 3/fortune-teller/style.css
+++ b/week 3/fortune-teller/style.css
@@ -1,7 +1,7 @@
 body {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-background-color: #2c3e50;
-color: white;
+background-color: #b8e0d2;
+color: black;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -10,7 +10,7 @@ text-align:center ;
 margin: 0;
 }
 .container {
-    background-color: #34495e;
+    background-color: #d6eadf;
     padding: 40px;
     border-radius: 15;
     box-shadow: 0 10px 20px rgba(0,0,0,0,2);
@@ -20,21 +20,21 @@ margin: 0;
 h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
-    color: #ecf0f1;
+    color: black;
 }
 button {
-    background-color: #e74c3c;
-    color: white;
+    background-color: #b8e0d2;
+    color: black;
     border: none;
     padding: 15px 30px;
     font-size: 1.2em;
     border-radius: 50px;/* Made it rounder for a nicer feel*/
     cursor: pointer;
     transition: all 0.2s;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 6px 0,0,0,0.1;
 }
 button:hover {
-    background-color: #c0392b;
+    background-color:#b8e0d2;
     transform: translateY(-2px);
     box-shadow: 0 6px 8px rgba (0,0,0,0.2);
 }
