--- a/week 2/portfolio/style.css
+++ b/week 2/portfolio/style.css
@@ -17,6 +17,26 @@
 .about{
     font-size: 30px;
 }
+.thanx{
+    display: flex;
+    font-size: 30px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+   
+}
+.goback{ 
+      display: block;
+    background-color: white;
+    color: black;
+    font-size: 20px;
+    border-radius: 10px;
+    padding: 9px;
+    width: 100px;
+    margin: 0 auto;
+    
+
+}
 
 hr{
     border-color: gray;
